Replace class array with class in tag annotation